fixing title letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -848,7 +848,6 @@ Home Section
 }
 
 .hs-title-size-4 {
-  letter-spacing: 24px;
   font-weight: 400;
   font-size: 48px;
 }
